syntax = "proto3";
package subscription_plan;

message SubscriptionPlan {
  enum SubscriptionDuration {
    DAY = 0;
    WEEK = 1;
    MONTH = 2;
    YEAR = 3;
  }

  int32 id = 1;
  string name = 2;
  string code = 3;
  string slug = 4;
  string description = 5;
  int32 price = 6;
  int32 extra_fee = 7;
  int32 invoice_period = 8;
  SubscriptionDuration invoice_duration = 9;
  int32 trail_period = 10;
  SubscriptionDuration trail_duration = 11;

}
